feat: updating dependencies and adding a configuration server